k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookbattery-service
spec:
  type: NodePort
  selector:
    app: bookbattery
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30007
